<resources>
    <!-- FaceBook -->
    <string name="facebook_app_id" translatable="false">161404327831584</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb161404327831584</string>
    <!--// END Facebook-->

    <string name="app_name">SayHello</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="btn_login_with_facebook">Login With Facebook</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login With Google</string>
    <string name="phone_number">Phone Number</string>
    <string name="my_phone_number">093522657</string>
    <string name="yon_chando">Yon Chando</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_group">New Group</string>
    <string name="setting">Setting</string>
    <string name="contact">Contact</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sent_user">Send User</string>
    <string name="friend">Friends</string>
    <string name="chat">Chat</string>
    <string name="login">Login</string>

    <string name="account_exist">Have already Account : Click Login</string>
    <string name="account_setting">Account Setting</string>
    <string name="my_email">yonchando@gmail.com</string>
    <string name="my_password">password</string>
    <string name="all_user">All User</string>
    <string name="click_change_profile">Click Change Profile</string>
    <string name="add_friend">Add Friend</string>
    <string name="send_message">Send Message</string>
    <string name="message">Message</string>
    <string name="status_online">Status Online</string>
</resources>
