<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/chat"/>
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_person_add"
            android:title="@string/friend" />

        <item

            android:id="@+id/nav_new_group"
            android:icon="@drawable/ic_group_add"
            android:title="@string/new_group" />
        <item
            android:id="@+id/nav_account_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/account_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
